# mx-deprecated-sdk-py-core

./: README.md  pyproject.toml  requirements.txt
multiversx_sdk_core/: __init__.py  amount.py  amount_test.py  codec.py  codec_test.py  interfaces.py  token_transfer.py  token_transfer_test.py  transaction.py  transaction_test.py  typecheck.py
multiversx_sdk_core/abi/: abi.py
multiversx_sdk_core/transaction_builders/: contract_builders.py  contract_builders_test.py  transfers_builders.py  transfers_builders_test.py
multiversx_sdk_core/transaction_factories/: delegation_factory.py  delegation_factory_test.py  relayed_transactions_factory_test.py  smart_contract_factory.py  smart_contract_factory_test.py  token_operations_factory.py  token_operations_factory_test.py
multiversx_sdk_core/transaction_outcome_parsers/: __init__.py  interfaces.py  token_management_transactions_outcome_parser.py  token_management_transactions_outcome_parser_test.py  token_management_transactions_outcome_parsers_types.py  transaction_parts.py
