[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "erdpy"
version = "5.0.0"
authors = [
  { name="MultiversX" },
]
license = "MIT"
description = "Package moved (renamed) to multiversx-sdk-cli"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
]
dependencies = [
]

[project.urls]
"Homepage" = "https://github.com/multiversx"
