[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multiversx-sdk-core"
version = "1.0.0"
authors = [
  { name="MultiversX" },
]
license = "MIT"
description = "Deprecated. Instead, use multiversx-sdk."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 7 - Inactive",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "pycryptodomex==3.19.1",
  "protobuf==3.20.2"
]

[project.urls]
"Homepage" = "https://github.com/multiversx/mx-sdk-py-core"
